			Java Electric change log

NOTE: Please place changes under the version that will be released next.

************************* Version 8.03f: *********************************

IMP: (09/05/05, SMR) Further improvements for EDIF bus output.

IMP: (09/05/05, DN) Transactional DB: LibId.java, ExportId.java, PortProtoId.java.

IMP: (09/06/05, DN) GenMath.figureAngle rounds to nearest 1/10 (was to lower).

IMP: (09/05/05, GVG) Add one option in Edit menu to toggle between neither end/both ends (bugzilla #489)

IMP: (09/05/05, GVG) Ability to search cells by name under ExplorerTree

IMP: (09/05/05, GVG) Expand explorer tree in Manual to place where html page is open (bugzilla #515).
Same for preferences dialog.

IMP: (09/05/05, GVG) Include library name in error message in LE (Bugzilla #516)
FIX: Added 'in (" + localCell.getLibrary().getName()+")' in error message.

IMP/MAN: (09/04/05, JKG) Add button to allow user to reset layer parasitics to factory default values

IMP: (09/04/05, DN) In getShape methods EditWindow class is replaced by EditWindow_ interface
    for future changes.

IMP: (09/04/05, DN) Step to transactional database: CellId.java, CellUsage.java, NodePortoId.java .

IMP: (09/04/05, DN) Less error messages on "unconnected pins" in NetCell.java .

IMP/MAN: (09/03/05, GVG) Max length rules for slot wires implemented. The code runs together with min area
checking because max length should be checked in extracted geometry (Bugzilla #518)

IMP/MAN: (09/02/05, GVG) Italian font when cells/libraries are marked with minor changes. Minor/major status
also valid for cells. Some code to determine if cells can be removed.

IMP/MAN: (09/02/05, GVG) Bold/italic fonts also for groups (Bugzilla #499)

BUG: (09/2/05, GVG) Exception in Cell information if no DRC was run (no Bugzilla)
FIX: DRC.getActiveBits() needs Technology as parameter.

IMP: (09/02/05, DN) Speed up redisplay:
  1) Don't use slow Math.round in databaseToScreen .